Fix page breaks on employee survey pdf

--- a/src/app/client/employee-survey-download/employee-survey-download.component.scss
+++ b/src/app/client/employee-survey-download/employee-survey-download.component.scss
@@ -268,3 +268,8 @@ header nav {
 .form__group {
   color: #696969;
 }
+
+.survey-container {
+  // page-break-after: always;
+  page-break-inside: avoid;
+}
